; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_4345.c_GetWindows9xVersion.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_4345.c_GetWindows9xVersion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@OS_VERSION_95 = common dso_local global i32 0, align 4
@OS_VERSION_98 = common dso_local global i32 0, align 4
@OS_VERSION_ME = common dso_local global i32 0, align 4
@OS_VERSION_UNKNOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetWindows9xVersion(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 4
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %18 [
    i32 0, label %12
    i32 10, label %14
    i32 90, label %16
  ]

12:                                               ; preds = %8
  %13 = load i32, i32* @OS_VERSION_95, align 4
  store i32 %13, i32* %3, align 4
  br label %20

14:                                               ; preds = %8
  %15 = load i32, i32* @OS_VERSION_98, align 4
  store i32 %15, i32* %3, align 4
  br label %20

16:                                               ; preds = %8
  %17 = load i32, i32* @OS_VERSION_ME, align 4
  store i32 %17, i32* %3, align 4
  br label %20

18:                                               ; preds = %8
  %19 = load i32, i32* @OS_VERSION_UNKNOWN, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %18, %16, %14, %12
  br label %23

21:                                               ; preds = %1
  %22 = load i32, i32* @OS_VERSION_UNKNOWN, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %20
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
